syntax = "proto3";

message User {
  int32 id = 1;
  repeated int32 jobroles = 2;
  int32 caree_level = 3;
  int32 discipline_id = 4;
  int32 industry_id = 5;
  string country = 6;
  int32 region = 7;
  int32 experience_n_entries_class = 8;
  int32 experience_years_experience = 9;
  int32 experience_years_in_current = 10;
  int32 edu_degree = 11;
  repeated int32 edu_fieldofstudies = 12;
  int32 wtcj = 13;
  int32 premium = 14;
}

message Item {
  int32 id = 1;
  int32 title = 2;
  int32 career_level = 3;
  int32 discipline_id = 4;
  int32 industry_id = 5;
  string country = 6;
  int32 is_payed = 7;
  int32 region = 8;
  float latitude = 9;
  float longitude = 10;
  int32 employment = 11;
  repeated int32 tags = 12;
  int64 created_at = 13;
}

message Interaction {
  int32 user_id = 1;
  int32 item_id = 2;
  int32 interaction_type = 3;
  int64 created_at = 4;
}

message TargetUser {
  int32 user_id = 1;
}

message TargetItem {
  int32 item_id = 1;
}

message WrittenCSVInfo {
  string filename = 1;
  string filepath = 2;
  string recordType = 3;
}
